# videdit

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  ffmpeg.rs  lib.rs  recording.rs
src/components/: ExportPanel.tsx  RecordingIndicator.tsx  SegmentList.tsx  SubtitleEditor.tsx  SubtitleList.tsx  Timeline.tsx  VideoPlayer.tsx
src/types/: index.ts
src/utils/: format.ts
